[pinpoint] Support Monorail projects in UI
Fix Pinpoint jobs monorail links for Monorail projects different than chromium.
When clicking on BISECT button, allow to specify a project other than chromium.

Bug: chromium:1133649
Change-Id: I354d68c661ffda32d1a9f4b658d2c9dfa0504710

--- a/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
@@ -68,7 +68,13 @@ found in the LICENSE file.
             <td><a href='/job/[[item.job_id]]'>[[item.name]]</a></td>
             <td><a href='[[configurationLink(item.configuration)]]'>[[formatConfiguration(item.configuration)]]</a></td>
             <td>[[item.user]]</td>
-            <td><a href="https://crbug.com/[[item.bug_id]]">[[item.bug_id]]</a></td>
+            <td>
+              <template is="dom-if" if="[[item.bug_id]]">
+                <a href="https://crbug.com/[[item.arguments.project]]/[[item.bug_id]]">
+                  [[item.arguments.project]]:[[item.bug_id]]
+                </a>
+              </template>
+            </td>
             <td>[[formatDate(item.created)]]</td>
             <td>[[formatComparisonMode(item.comparison_mode)]]</td>
             <td>
