Fix 'Unknown git hash' when repository is not chromium.
Bug: chromium:1133649
Change-Id: I4c63ef986c3d96a3f09e42a98d6401efb71e647e

--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -428,6 +428,7 @@ found in the LICENSE file.
           return;
         }
         this.bug_id = job.bug_id;
+        this.project = job.arguments.project;
         this.patch = job.arguments.patch;
         // Legacy try job doesn't have base_git_hash, use end_git_hash instead
         this.base_git_hash = job.arguments.base_git_hash ||
@@ -463,6 +464,7 @@ found in the LICENSE file.
 
       commitsParams(job) {
         return {
+          repository: job.arguments.project,
           start_git_hash: job.arguments.start_git_hash,
           end_git_hash: job.arguments.end_git_hash
         };
