--- a/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
+++ b/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
@@ -35,8 +35,8 @@ found in the LICENSE file.
     <ul>
       <template is="dom-if" if="[[job.bug_id]]">
         <li>
-          <a href="https://crbug.com/[[job.bug_id]]" target="_blank">
-            Issue [[job.bug_id]]
+          <a href="https://crbug.com/[[getProject(job)]]/[[job.bug_id]]" target="_blank">
+            Issue [[getProject(job)]]:[[job.bug_id]]
           </a>
       </template>
       <li>
@@ -65,6 +65,10 @@ found in the LICENSE file.
         job: {
           type: Object,
         },
+      },
+
+      getProject(job) {
+        return job.arguments.project ? job.arguments.project : 'chromium';
       },
 
       getArguments(job) {
