Fix pop up statement when triaging with an existing bug.
The Polymere databinding fails for {{!!lastSubmittedTryJobId}}.
Not clear why !! was added 4 years ago (https://codereview.chromium.org/1955433004/).
The fact that jobId is set as Number instead of String probably doesn't help.

Bug: chromium:1134978
Change-Id: I67caf6750315ab0b805090d46e1932d52feaeea8

--- a/dashboard/dashboard/elements/triage-dialog.html
+++ b/dashboard/dashboard/elements/triage-dialog.html
@@ -121,7 +121,7 @@ on an alert, or clicks on a "triage" button on the alerts page. It allows the
                target="_blank">
                {{lastSubmittedProjectId}}:{{lastSubmittedBugId}}
             </a> created/updated.
-        <template is="dom-if" if="{{!!lastSubmittedTryJobId}}">
+        <template is="dom-if" if="{{lastSubmittedTryJobId}}">
           Bisect job <a href="{{lastSubmittedTryJobUrl}}"
                         target="_blank">{{lastSubmittedTryJobId}}</a> started.
         </template>
@@ -158,8 +158,8 @@ Polymer({
       value: ''
     },
     lastSubmittedTryJobId: {
-      type: Number,
-      value: 0
+      type: String,
+      value: ''
     },
     lastSubmittedTryJobUrl: {
       type: String,
