--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -20,6 +20,7 @@ found in the LICENSE file.
 <link rel="import" href="/components/paper-radio-button/paper-radio-button.html">
 <link rel="import" href="/components/paper-radio-group/paper-radio-group.html">
 <link rel="import" href="/components/paper-tooltip/paper-tooltip.html">
+<link rel="import" href="/dashboard/static/monorail_projects.html">
 <link rel="import" href="/elements/autocomplete-box.html">
 
 <link rel="import" href="/elements/base-style.html">
@@ -278,7 +279,13 @@ found in the LICENSE file.
             <template is="dom-if" if="[[isBisectJob(comparisonMode)]]">
               <paper-input name="pin" value="[[job.arguments.pin]]" label="Patch to apply (Gerrit URL)"></paper-input>
             </template>
-            <paper-input name="project" value="{{project::input}}" label="Monorail Project"></paper-input>
+            <paper-dropdown-menu name="project" value="{{project::input}}" label="Monorail Project">
+              <paper-listbox class="dropdown-content" selected="{{project}}">
+                <template is="dom-repeat" items="[[d.MONORAIL_PROJECTS]]">
+                  <paper-item>[[item]]</paper-item>
+                </template>
+              </paper-listbox>
+            </paper-dropdown-menu>
             <paper-input name="bug_id" value="{{bug_id}}" label="Bug ID"></paper-input>
 
             <paper-checkbox name="experimental_execution_engine">
