[NetLog Viewer] Enable import of .ZIP files
Netlog JSON files can grow quite large and compress well, and are thus
often exchanged inside ZIP archives. Enable the Netlog Viewer to parse
Netlogs from within ZIP files without manual extraction.

Bug: chromium:1057782
Change-Id: Iebb66755f91d43e4a31a9b70aca350dbc7a34593

--- a/netlog_viewer/netlog_viewer/netlog_viewer.html
+++ b/netlog_viewer/netlog_viewer/netlog_viewer.html
@@ -60,7 +60,7 @@ found in the LICENSE file.
 <script src="spdy_view.js"></script>
 <script src="modules_view.js"></script>
 <script src="prerender_view.js"></script>
-
+<script src="third_party/jszip/jszip.min.js"></script>
 <dom-module id="netlog-viewer">
   <template>
     <style>
@@ -78,7 +78,7 @@ found in the LICENSE file.
       <!-- The bar at the very top of NetLog viewer that identifies the loaded
            log file. -->
       <top-bar-view></top-bar-view>
-    
+
     <!-- The box below the top bar that fills the remaining space and contains
          everything else -->
     <div class="flexfill flexrow">
