--- a/netlog_viewer/netlog_viewer/import_view.html
+++ b/netlog_viewer/netlog_viewer/import_view.html
@@ -2,8 +2,8 @@
   <template>
     <div id=import-view-tab-content class=content-box>
       <div>
-        <div style='margin-bottom:20px'><b>TIP</b>: Drag-and-drop files into this window.</div>
-          <input type=file value="Load log from file" id=import-view-load-log-file accept=".json">
+        <div style='margin-bottom:20px'><b>TIP</b>: Drag-and-drop a netlog file into this window.</div>
+          <input type=file id=import-view-load-log-file accept=".json">
           <pre id=import-view-load-status-text></pre>
       </div>
 
@@ -41,7 +41,19 @@
             <span id=import-view-activeFieldTrialGroups></span>
           </td>
         </tr>
-        <tr>
+        <tr id=import-view-row-addedFieldTrialGroups>
+          <th>Field Trial Groups activated during capture</th>
+          <td>
+            <span id=import-view-addedFieldTrialGroups></span>
+          </td>
+        </tr>
+        <tr id=import-view-row-removedFieldTrialGroups>
+          <th>Field Trial Groups deactivated during capture</th>
+          <td>
+            <span id=import-view-removedFieldTrialGroups></span>
+          </td>
+        </tr>
+        <tr id=import-view-row-user-comments>
           <th>User comments</th>
           <td>
             <pre id=import-view-user-comments></pre>
