[NetLog Viewer] Enable import of .ZIP files
Netlog JSON files can grow quite large and compress well, and are thus
often exchanged inside ZIP archives. Enable the Netlog Viewer to parse
Netlogs from within ZIP files without manual extraction.

Bug: chromium:1057782
Change-Id: Iebb66755f91d43e4a31a9b70aca350dbc7a34593

--- a/netlog_viewer/netlog_viewer/import_view.html
+++ b/netlog_viewer/netlog_viewer/import_view.html
@@ -3,7 +3,7 @@
     <div id=import-view-tab-content class=content-box>
       <div>
         <div style='margin-bottom:20px'><b>TIP</b>: Drag-and-drop a netlog file into this window.</div>
-          <input type=file id=import-view-load-log-file accept=".json">
+          <input type=file id=import-view-load-log-file accept=".json,.zip">
           <pre id=import-view-load-status-text></pre>
       </div>
 
