--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -171,11 +171,11 @@ found in the LICENSE file.
             <paper-radio-group id="comparison_mode" selected="{{comparisonMode}}">
               <paper-radio-button class="radio" name="try" disabled="[[hasJob(job)]]">Try Job</paper-radio-button>
               <paper-radio-button class="radio" name="performance" disabled="[[hasJob(job)]]">Bisect</paper-radio-button>
-              <input hidden="[[isBisectJob(comparisonMode)]]"
+              <paper-input hidden="[[isBisectJob(comparisonMode)]]"
                      id="initial_attempt_count"
                      name="initial_attempt_count"
                      value="{{initial_attempt_count}}"
-                     label="Attempt Count"/>
+                     label="Attempt Count"></paper-input>
               <label hidden="[[isBisectJob(comparisonMode)]]"
                      id="initial_attempt_count_label"
                      for="initial_attempt_count">Attempt Count: <attempt-count-help></attempt-count-help></label>
@@ -351,6 +351,8 @@ found in the LICENSE file.
 
     const _STATISTICS = ['avg', 'count', 'max', 'min', 'std', 'sum'];
 
+    const _default_attempt_count = 10
+
     Polymer({
       is: 'new-job-fab',
 
@@ -387,7 +389,7 @@ found in the LICENSE file.
         extra_test_args: String,
         initial_attempt_count: {
           type: Number,
-          value: 10
+          value: _default_attempt_count
         },
         base_patch: String,
         experiment_patch: String,
@@ -581,7 +583,7 @@ found in the LICENSE file.
         // recommended iterations for press benchmarks on Mac M1 (crbug/1416374)
         // set to 10 if not a try job
         if (job != null && job.arguments.comparison_mode != 'try'){
-          this.initial_attempt_count = 10;
+          this.initial_attempt_count = _default_attempt_count;
           return;
         }
         // restarting jobs should default to what they were run on
@@ -591,17 +593,13 @@ found in the LICENSE file.
             this.initial_attempt_count = job.arguments.initial_attempt_count;
             return;
         }
-        if (configuration.startsWith('mac-m1_mini_2020')) {
+        if (this.initial_attempt_count == _default_attempt_count && configuration.startsWith('mac-m1_mini_2020')) {
           if (benchmark.toLowerCase() == 'speedometer2' || benchmark.toLowerCase() == 'jetstream2') {
             this.initial_attempt_count = 30;
           // MotionMark
           } else if (benchmark.toLowerCase().startsWith('rendering.desktop')) {
             this.initial_attempt_count = 60;
-          } else {
-            this.initial_attempt_count = 10;
           }
-        } else {
-          this.initial_attempt_count = 10;
         }
       },
 
