--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -174,8 +174,9 @@ found in the LICENSE file.
               <input hidden="[[isBisectJob(comparisonMode)]]"
                      id="initial_attempt_count"
                      name="initial_attempt_count"
-                     value="{{initial_attempt_count}}"
-                     label="Attempt Count"/>
+                     placeholder="[[defaultAttemptCount(configuration, benchmark)]]"
+                     input="{{initial_attempt_count}}"
+                     required=true/>
               <label hidden="[[isBisectJob(comparisonMode)]]"
                      id="initial_attempt_count_label"
                      for="initial_attempt_count">Attempt Count: <attempt-count-help></attempt-count-help></label>
@@ -351,6 +352,8 @@ found in the LICENSE file.
 
     const _STATISTICS = ['avg', 'count', 'max', 'min', 'std', 'sum'];
 
+    const _DEFAULT_ATTEMPT_COUNT = 10
+
     Polymer({
       is: 'new-job-fab',
 
@@ -385,10 +388,7 @@ found in the LICENSE file.
         },
         comparison_magnitude: Number,
         extra_test_args: String,
-        initial_attempt_count: {
-          type: Number,
-          value: 10
-        },
+        initial_attempt_count: Number,
         base_patch: String,
         experiment_patch: String,
         statistic: String,
@@ -433,7 +433,7 @@ found in the LICENSE file.
         'testSuitesChanged(testSuites)',
         'benchmarkConfigChanged(benchmarkConfig)',
         'benchmarkChanged(benchmark)',
-        'jobConfigurationBenchmarkChanged(job, configuration, benchmark)',
+         // 'jobConfigurationBenchmarkChanged(job, configuration, benchmark)',
         'jobChanged(job)',
       ],
 
@@ -577,33 +577,29 @@ found in the LICENSE file.
         this.benchmarkConfig = null;
       },
 
-      jobConfigurationBenchmarkChanged(job, configuration, benchmark) {
-        // recommended iterations for press benchmarks on Mac M1 (crbug/1416374)
-        // set to 10 if not a try job
-        if (job != null && job.arguments.comparison_mode != 'try'){
-          this.initial_attempt_count = 10;
-          return;
-        }
-        // restarting jobs should default to what they were run on
-        if (job != null &&
-              configuration == job.arguments.configuration &&
-              benchmark == job.arguments.benchmark) {
-            this.initial_attempt_count = job.arguments.initial_attempt_count;
-            return;
-        }
-        if (configuration.startsWith('mac-m1_mini_2020')) {
-          if (benchmark.toLowerCase() == 'speedometer2' || benchmark.toLowerCase() == 'jetstream2') {
-            this.initial_attempt_count = 30;
-          // MotionMark
-          } else if (benchmark.toLowerCase().startsWith('rendering.desktop')) {
-            this.initial_attempt_count = 60;
-          } else {
-            this.initial_attempt_count = 10;
-          }
-        } else {
-          this.initial_attempt_count = 10;
-        }
-      },
+      // jobConfigurationBenchmarkChanged(job, configuration, benchmark) {
+      //   // recommended iterations for press benchmarks on Mac M1 (crbug/1416374)
+      //   // set to 10 if not a try job
+      //   if (job != null && job.arguments.comparison_mode != 'try'){
+      //     this.initial_attempt_count = _DEFAULT_ATTEMPT_COUNT;
+      //     return;
+      //   }
+      //   // restarting jobs should default to what they were run on
+      //   if (job != null &&
+      //         configuration == job.arguments.configuration &&
+      //         benchmark == job.arguments.benchmark) {
+      //       this.initial_attempt_count = job.arguments.initial_attempt_count;
+      //       return;
+      //   }
+      //   if (this.initial_attempt_count == _DEFAULT_ATTEMPT_COUNT && configuration.startsWith('mac-m1_mini_2020')) {
+      //     if (benchmark.toLowerCase() == 'speedometer2' || benchmark.toLowerCase() == 'jetstream2') {
+      //       this.initial_attempt_count = 30;
+      //     // MotionMark
+      //     } else if (benchmark.toLowerCase().startsWith('rendering.desktop')) {
+      //       this.initial_attempt_count = 60;
+      //     }
+      //   }
+      // },
 
       commitsParams(job) {
         return {
@@ -620,6 +616,26 @@ found in the LICENSE file.
         else {
           return "https://chromeperf.appspot.com" + api;
         }
+      },
+
+      defaultAttemptCount(configuration, benchmark) {
+        // restarting jobs should default to what they were run on
+        // if (job != null &&
+        //       configuration == job.arguments.configuration &&
+        //       benchmark == job.arguments.benchmark) {
+        //     return job.arguments.initial_attempt_count;
+        // }
+        // press benchmark on mac m1 iteration defaults
+        if (configuration.startsWith('mac-m1_mini_2020')) {
+          if (benchmark.toLowerCase() == 'speedometer2' || benchmark.toLowerCase() == 'jetstream2') {
+            return 30;
+          // MotionMark
+          } else if (benchmark.toLowerCase().startsWith('rendering.desktop')) {
+            return 60;
+          }
+        }
+        // otherwise return default for all other configurations + benchmarks
+        return _DEFAULT_ATTEMPT_COUNT
       },
 
       describeParams(benchmark) {
