Add mapping from repository name to monorail project name.
These two are not necesarilly the same, but Pinpoint treats them as such.

Bug: chromium:1442024
Change-Id: I429413c10bee26804dc8e8f43ce18aeeccd256a6

--- a/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
+++ b/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
@@ -93,6 +93,10 @@ found in the LICENSE file.
         if (!job || !job.arguments || !job.arguments.project) {
           return 'chromium';
         }
+        if (job.arguments.project === 'angle') {
+          return 'angleproject'
+        }
+
         return job.arguments.project;
       },
 
