--- a/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
@@ -236,6 +236,9 @@ found in the LICENSE file.
         if (!job || !job.arguments || !job.arguments.project) {
           return 'chromium';
         }
+        if (job.arguments.project === 'angle') {
+          return 'angleproject'
+        }
         return job.arguments.project;
       },
     });
