--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -609,11 +609,14 @@ found in the LICENSE file.
         }
         // press benchmark on mac m1 iteration defaults
         if (configuration.startsWith('mac-m1_mini_2020')) {
-          if (benchmark.toLowerCase() == 'speedometer2' || benchmark.toLowerCase() == 'jetstream2') {
-            return 30;
+          if (benchmark.toLowerCase() == 'jetstream2') {
+            return 64;
+          }
+          if (benchmark.toLowerCase() == 'speedometer2') {
+            return 128;
           // MotionMark
           } else if (benchmark.toLowerCase().startsWith('rendering.desktop')) {
-            return 60;
+            return 96;
           }
         }
         // otherwise return default for all other configurations + benchmarks
